chore: Make it work on Java 21